--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </button>
             <nav class="nav">
               <a href="#app">Login</a>
-              <a href="#about">Sobre</a>
+              <a href="#about-title">Sobre</a>
               <a href="#contact">Contato</a>
             </nav>
             <!-- Botão Voltar ao Topo -->
@@ -41,7 +41,15 @@
                 <option value="entregador">Entregador</option>
                 <option value="admin">Administrador</option>
             </select>
+            <!-- Ícones Sociais -->
+            <div class="social-icons">
+                <a href="index.html"><img src="Imagens/Google.jpg" alt="Login com Google" class="social-links"></a>
+                <a href="index.html"><img src="Imagens/Facebook.jpg" alt="Login com Facebook" class="social-links"></a>
+                <a href="index.html"><img src="Imagens/X-Twiter.jpg" alt="Login com X-Twiter" class="social-links"></a>
+            </div>
             <button id="login-button">Login</button>
+            <!-- Link para Cadastro -->
+            <p class="signup-link">Não é cadastrado? <a href="cadastro.html">Cadastre-se</a></p>
         </div>
         <div id="morador-section" style="display: none;">
             <h2>Morador</h2>
