Atualizações dos botões da index

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="index.html"><img src="Imagens/Facebook.jpg" alt="Login com Facebook" class="social-links"></a>
                 <a href="index.html"><img src="Imagens/X-Twiter.jpg" alt="Login com X-Twiter" class="social-links"></a>
             </div>
-            <button id="login-button">Login</button>
+            <button id="entrar">Entrar</button>
             <!-- Link para Cadastro -->
             <p class="signup-link">Não é cadastrado? <a href="cadastro.html">Cadastre-se</a></p>
         </div>
