Inclusão de Java com autenticação
Inclusão de códigos Java com autenticações em redes sociais.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             </select>
             <!-- Ícones Sociais -->
             <div class="social-icons">
-                <a href="index.html"><img src="Imagens/Google.jpg" alt="Login com Google" class="social-links"></a>
-                <a href="index.html"><img src="Imagens/Facebook.jpg" alt="Login com Facebook" class="social-links"></a>
-                <a href="index.html"><img src="Imagens/X-Twiter.jpg" alt="Login com X-Twiter" class="social-links"></a>
+                <a href="/oauth2/authorization/google"><img src="Imagens/Google.jpg" alt="Login com Google" class="social-links"></a>
+                <a href="/oauth2/authorization/facebook"><img src="Imagens/Facebook.jpg" alt="Login com Facebook" class="social-links"></a>
+                <a href="/oauth2/authorization/twitter"><img src="Imagens/X-Twiter.jpg" alt="Login com X-Twiter" class="social-links"></a>
             </div>
             <button id="entrar">Entrar</button>
             <!-- Link para Cadastro -->
