Ajustes html e css

--- a/home.html
+++ b/home.html
@@ -7,6 +7,6 @@
 <body>
     <h2>Bem-vindo, <span th:text="${nome}"></span></h2>
     <p>E-mail: <span th:text="${email}"></span></p>
-    <a href="/logout">Sair</a>
+    <a href="index.html">Sair</a>
 </body>
 </html>
