--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <!-- Cabeçalho -->
     <header>
         <div class="logo">
-            <img src="Imagens/Tokseg.png" alt="Logo Tokseg">
+            <a href="https://tokseg.com" target="_blank" aria-label="Ir para o site da Tokseg">
+                <img src="Imagens/Tokseg.png" alt="Logo Tokseg">
+            </a>
         </div>
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Digite para pesquisar..." aria-label="Digite para pesquisar">
